--- a/components/molecule/selectPopover/src/styles/settings.scss
+++ b/components/molecule/selectPopover/src/styles/settings.scss
@@ -34,3 +34,11 @@ $molecule-select-popover-overlay-types: (
     bgc: $bgc-select-popover-light-overlay
   )
 ) !default;
+
+$trf--select-popover-select-icon-has-custom-wrapper: rotate(-90deg) !default;
+$trf--select-popover-select-icon-has-custom-wrapper--is-open: rotate(
+  -90deg
+) !default;
+$l-select-popover--right: 0 !default;
+$r-select-popover--left: 0 !default;
+$p-select-popover: absolute !default;
