--- a/components/atom/progressBar/src/ProgressBarLine/settings.scss
+++ b/components/atom/progressBar/src/ProgressBarLine/settings.scss
@@ -29,5 +29,6 @@ $c-atom-line-progress-bar-status--loading: $c-gray-lightest !default;
 $size-atom-line-progress-bar: (
   small: $sz-base * 0.5,
   medium: $sz-base,
-  large: $sz-base * 2
+  large: $sz-base * 2,
+  xl: $sz-base * 4
 );
