--- a/components/atom/progressBar/src/ProgressBarLine/settings.scss
+++ b/components/atom/progressBar/src/ProgressBarLine/settings.scss
@@ -30,5 +30,5 @@ $size-atom-line-progress-bar: (
   small: $sz-base * 0.5,
   medium: $sz-base,
   large: $sz-base * 2,
-  xl: $sz-base * 4
+  extraLarge: $sz-base * 4
 );
