feat(components/atom/card): Add xl & xxl border radious atom card config

--- a/components/atom/card/src/styles/settings.scss
+++ b/components/atom/card/src/styles/settings.scss
@@ -15,7 +15,9 @@ $p-atom-card-info: $p-l !default;
 $bdrs-atom-card-rounded: (
   's': $bdrs-s,
   'm': $bdrs-m,
-  'l': $bdrs-l
+  'l': $bdrs-l,
+  'xl': $bdrs-xl,
+  'xxl': $bdrs-xxl
 ) !default;
 $bxsh-atom-card-elevation: (
   's': $bxsh-s,
