--- a/components/atom/tag/src/styles/index.scss
+++ b/components/atom/tag/src/styles/index.scss
@@ -94,7 +94,14 @@ $base-class: '.sui-AtomTag';
     }
 
     &:not([aria-disabled='true']) {
-      &:hover,
+      &:hover {
+        @media (hover: hover) and (pointer: fine) {
+          background-color: $bgc-atom-tag-actionable--hover;
+          color: $c-atom-tag-actionable;
+          cursor: pointer;
+          fill: $c-atom-tag-actionable;
+        }
+      }
       &:active {
         background-color: $bgc-atom-tag-actionable--hover;
         color: $c-atom-tag-actionable;
@@ -109,7 +116,13 @@ $base-class: '.sui-AtomTag';
       fill: $c-atom-tag-actionable-invert;
 
       &:not([aria-disabled='true']) {
-        &:hover,
+        &:hover {
+          @media (hover: hover) and (pointer: fine) {
+            background-color: $bgc-atom-tag-actionable-invert--hover;
+            color: $c-atom-tag-actionable-invert--hover;
+            fill: $c-atom-tag-actionable-invert--hover;
+          }
+        }
         &:active {
           background-color: $bgc-atom-tag-actionable-invert--hover;
           color: $c-atom-tag-actionable-invert--hover;
