feat(Root): move webkit-tap-highlight-color to the base-class

--- a/components/atom/tag/src/_settings.scss
+++ b/components/atom/tag/src/_settings.scss
@@ -1,6 +1,7 @@
 $bd-atom-tag: none !default;
 $bgc-atom-tag: color-variation($c-gray, 3) !default;
 $mw-label: 240px !default;
+$thc-atom-tag: inherit !default;
 
 // sizes
 $h-atom-tag-l: 40px !default;
