--- a/components/atom/tag/src/styles/index.scss
+++ b/components/atom/tag/src/styles/index.scss
@@ -17,6 +17,7 @@ $base-class: '.sui-AtomTag';
   padding: $p-atom-tag-m;
   position: relative;
   white-space: nowrap;
+  -webkit-tap-highlight-color: $thc-atom-tag;
 
   &--isFitted {
     margin: 0;
@@ -95,7 +96,6 @@ $base-class: '.sui-AtomTag';
 
     &:not([aria-disabled='true']) {
       &:hover {
-        -webkit-tap-highlight-color: transparent;
         @media (hover: hover) and (pointer: fine) {
           background-color: $bgc-atom-tag-actionable--hover;
           color: $c-atom-tag-actionable;
@@ -118,7 +118,6 @@ $base-class: '.sui-AtomTag';
 
       &:not([aria-disabled='true']) {
         &:hover {
-          -webkit-tap-highlight-color: transparent;
           @media (hover: hover) and (pointer: fine) {
             background-color: $bgc-atom-tag-actionable-invert--hover;
             color: $c-atom-tag-actionable-invert--hover;
