--- a/components/atom/tag/src/_settings.scss
+++ b/components/atom/tag/src/_settings.scss
@@ -1,7 +1,6 @@
 $bd-atom-tag: none !default;
 $bgc-atom-tag: color-variation($c-gray, 3) !default;
 $mw-label: 240px !default;
-$thc-atom-tag: inherit !default;
 
 // sizes
 $h-atom-tag-l: 40px !default;
@@ -28,6 +27,7 @@ $bgc-atom-tag-actionable: $c-primary !default;
 $bgc-atom-tag-actionable--hover: $c-primary-dark !default;
 $c-atom-tag-actionable: $c-white !default;
 $bd-atom-tag-actionable: none !default;
+$thc-atom-tag-actionable: inherit !default;
 $bgc-atom-tag-actionable-invert: $c-white !default;
 $bgc-atom-tag-actionable-invert--hover: $c-primary !default;
 $c-atom-tag-actionable-invert: $c-primary !default;
