--- a/components/molecule/coachmark/src/styles/settings.scss
+++ b/components/molecule/coachmark/src/styles/settings.scss
@@ -7,11 +7,12 @@ $g-molecule-coachmark-tooltip-content: $g-l !default;
 $fx-molecule-coachmark-tooltip-image-container: 0 0 64px;
 $fz-molecule-coachmark-tooltip-heading-text: $fz-m !default;
 $fw-molecule-coachmark-tooltip-heading-text: $fw-semi-bold !default;
-$c-molecule-coachmark-tooltip-heading-text: $c-primary !default;
-$c-molecule-coachmark-tooltip-body-text: $c-primary !default;
+$c-molecule-coachmark-tooltip-heading-text: $c-black !default;
+$c-molecule-coachmark-tooltip-body-text: $c-black !default;
+$c-molecule-coachmark-tooltip-stepper-text: $c-black !default;
 $fz-molecule-coachmark-tooltip-body-text: $fz-m !default;
 $fw-molecule-coachmark-tooltip-step-counter: $fw-semi-bold !default;
 $fz-molecule-coachmark-tooltip-step-counter: $fz-m !default;
 $m-molecule-coachmark-tooltip-body-text: 0 0 $m-l 0 !default;
 $m-molecule-coachmark-tooltip-heading-text: 0 0 $m-m 0 !default;
-$m-molecule-coachmark-tooltip-header: 0 0 $m-s 0 !default;
+$m-molecule-coachmark-tooltip-header: 0 0 $m-l 0 !default;
