--- a/components/atom/table/src/styles/index.scss
+++ b/components/atom/table/src/styles/index.scss
@@ -18,6 +18,7 @@ $base-class: '.react-AtomTable';
     font-weight: $fw-regular;
     text-align: left;
     color: $c-atom-table-header-cell;
+    border-bottom: $bd-atom-table-header-cell;
   }
 
   &-row {
