--- a/components/atom/table/src/styles/settings.scss
+++ b/components/atom/table/src/styles/settings.scss
@@ -6,4 +6,4 @@ $bgc-atom-table-row-actionable--hover: $c-gray-light-4 !default;
 $bgc-atom-table-row-actionable--active: $c-gray-light-3 !default;
 $bd-atom-table-row: $bdw-s solid $c-gray-light-5 !default;
 $c-atom-table-header-cell: $c-gray-dark !default;
-$bdb-atom-table-header-cell: 0 !default;
+$bdb-atom-table-header-cell: none !default;
