--- a/components/molecule/drawer/src/_settings.scss
+++ b/components/molecule/drawer/src/_settings.scss
@@ -6,6 +6,8 @@ $bxsh-molecule-drawer: 0 0 6px rgba(0, 0, 0, 0.4) !default;
 $bgc-molecule-drawer: $c-white !default;
 $bdtlrs-molecule-drawer-content: 0 !default;
 $bdtrrs-molecule-drawer-content: 0 !default;
+$bdblrs-molecule-drawer-content: $bdtlrs-molecule-drawer-content !default;
+$bdbrrs-molecule-drawer-content: $bdtrrs-molecule-drawer-content !default;
 $ox-molecule-drawer-sroll: scroll !default;
 $oy-molecule-drawer-sroll: scroll !default;
 
