feat(components/molecule/buttonGroup): add prop for spaced between items of buttonGroup

--- a/components/molecule/buttonGroup/src/styles/index.scss
+++ b/components/molecule/buttonGroup/src/styles/index.scss
@@ -6,4 +6,12 @@ $base-class: '.sui-MoleculeButtonGroup';
   &--fullWidth {
     display: flex;
   }
+
+  &--spaced-medium {
+    gap: $g-m;
+  }
+
+  &--spaced-large {
+    gap: $g-l;
+  }
 }
