--- a/components/atom/progressBar/src/ProgressBarLine/index.scss
+++ b/components/atom/progressBar/src/ProgressBarLine/index.scss
@@ -63,6 +63,9 @@ $base-class-line: '#{$base-class}Line';
       &-loading {
         background-color: $c-atom-line-progress-bar-status--loading;
       }
+      &-success {
+        background-color: $c-atom-line-progress-bar-status--success;
+      }
     }
   }
 }
