feat(components/atom/progressBar): Include success status in progress bar circle

--- a/components/atom/progressBar/src/ProgressBarCircle/index.scss
+++ b/components/atom/progressBar/src/ProgressBarCircle/index.scss
@@ -116,6 +116,10 @@ $base-class-circle: '#{$base-class}Circle';
     &--loading {
       stroke: $c-atom-circle-progress-bar-trail--loading;
     }
+
+    &--success {
+      stroke: $c-atom-circle-progress-bar-trail--success;
+    }
   }
 
   &-path {
