--- a/components/atom/progressBar/src/ProgressBarCircle/settings.scss
+++ b/components/atom/progressBar/src/ProgressBarCircle/settings.scss
@@ -15,6 +15,7 @@ $h-atom-circle-progress-bar-circle-small--error: $w-atom-circle-progress-bar-cir
 $c-atom-circle-progress-bar-trail: $c-gray-lightest !default;
 $c-atom-circle-progress-bar-trail--error: $c-alert !default;
 $c-atom-circle-progress-bar-trail--loading: $c-gray-lightest !default;
+$c-atom-circle-progress-bar-trail--success: $c-success !default;
 $c-atom-circle-progress-bar-path: $c-primary !default;
 $fz-atom-circle-progress-bar-text--extraLarge: $fz-l !default;
 $fz-atom-circle-progress-bar-text--inner: $fz-s !default;
