--- a/components/molecule/buttonGroup/src/styles/index.scss
+++ b/components/molecule/buttonGroup/src/styles/index.scss
@@ -14,4 +14,8 @@ $base-class: '.sui-MoleculeButtonGroup';
   &--spaced-large {
     gap: $g-l;
   }
+
+  &--vertical {
+    flex-direction: column;
+  }
 }
