--- a/components/atom/spinner/src/SUILoader/settings.scss
+++ b/components/atom/spinner/src/SUILoader/settings.scss
@@ -1,32 +1,27 @@
-$sz-atom-spinner-oval: $sz-icon-s !default;
-$sz-atom-spinner: $sz-atom-spinner-oval * 2 !default;
 $z-atom-spinner-loader: 999 !default;
 
-@mixin animation-atom-spinner($name, $color1, $color2) {
-  @keyframes atom-spinner-#{'' + $name} {
+@mixin animation-atom-spinner($name, $color1, $color2, $sizeName, $size) {
+  $totalSize: $size * 2;
+
+  @keyframes atom-spinner-#{'' + $name}-#{'' + $sizeName} {
     0% {
-      box-shadow: -$sz-atom-spinner-oval * 0.5 $sz-atom-spinner-oval $color1,
-        $sz-atom-spinner-oval * 0.5 $sz-atom-spinner $color2;
+      box-shadow: -$size * 0.5 $size $color1, $size * 0.5 $totalSize $color2;
     }
 
     25% {
-      box-shadow: $sz-atom-spinner-oval * 0.5 $sz-atom-spinner-oval $color1,
-        -$sz-atom-spinner-oval * 0.5 $sz-atom-spinner $color2;
+      box-shadow: $size * 0.5 $size $color1, -$size * 0.5 $totalSize $color2;
     }
 
     50% {
-      box-shadow: $sz-atom-spinner-oval * 0.5 $sz-atom-spinner $color1,
-        -$sz-atom-spinner-oval * 0.5 $sz-atom-spinner-oval $color2;
+      box-shadow: $size * 0.5 $totalSize $color1, -$size * 0.5 $size $color2;
     }
 
     75% {
-      box-shadow: -$sz-atom-spinner-oval * 0.5 $sz-atom-spinner $color1,
-        $sz-atom-spinner-oval * 0.5 $sz-atom-spinner-oval $color2;
+      box-shadow: -$size * 0.5 $totalSize $color1, $size * 0.5 $size $color2;
     }
 
     100% {
-      box-shadow: -$sz-atom-spinner-oval * 0.5 $sz-atom-spinner-oval $color1,
-        $sz-atom-spinner-oval * 0.5 $sz-atom-spinner $color2;
+      box-shadow: -$size * 0.5 $size $color1, $size * 0.5 $totalSize $color2;
     }
   }
 }
