--- a/components/molecule/accordion/src/styles/index.scss
+++ b/components/molecule/accordion/src/styles/index.scss
@@ -100,10 +100,10 @@ $base-class-item-panel: '#{$base-class-item}Panel';
     box-sizing: inherit;
     width: 100%;
     height: 100%;
-    line-height: 1.15;
+    line-height: $lh-molecule-accordion-header;
     color: $c-accordion-item-header;
     font-weight: $fw-molecule-accordion-header;
-    font-size: $fz-base;
+    font-size: $fz-molecule-accordion-header;
     font-family: $ff-molecule-accordion-header;
     overflow: hidden;
     text-align: inherit;
@@ -115,7 +115,7 @@ $base-class-item-panel: '#{$base-class-item}Panel';
     color: $c-accordion-item-header;
   }
   #{$base-class-item-header-icon} {
-    padding: $sz-base;
+    padding: $p-accordion-item-header-icon;
     color: $c-accordion-item-header-icon;
   }
 }
