feat(components/molecule/accordion): preserve backwards compatibility

--- a/components/molecule/accordion/src/styles/settings.scss
+++ b/components/molecule/accordion/src/styles/settings.scss
@@ -18,7 +18,7 @@ $sz-accordion-item-icon: $sz-accordion-tab-icon !default;
 $p-accordion-item-panel: $p-accordion-tab-content !default;
 
 // Typography
-$lh-molecule-accordion-header: $lh-base !default;
+$lh-molecule-accordion-header: 1.15 !default;
 $fz-molecule-accordion-header: $fz-base !default;
 $ff-molecule-accordion-header: $ff-molecule-accordion-title;
 $fw-molecule-accordion-header: $fw-molecule-accordion-title !default;
