feat(components/molecule/validationCode): avoid to render header and footer nodes if no header or fo

--- a/components/molecule/validationCode/src/styles/index.scss
+++ b/components/molecule/validationCode/src/styles/index.scss
@@ -31,6 +31,10 @@ $base-class: '.sui-MoleculeValidationCode';
       justify-content: flex-start;
       margin-bottom: $m-xl;
       width: fit-content;
+
+      &.is-marginless {
+        margin-bottom: 0;
+      }
     }
   }
 
