feat(components/atom/videoPlayer): ajust center position video in video player

--- a/components/atom/videoPlayer/src/index.scss
+++ b/components/atom/videoPlayer/src/index.scss
@@ -19,6 +19,7 @@ $fourByThreeAspectRatio: calc(100% / 4 * 3);
   align-items: center;
   background: $c-black;
   display: flex;
+  justify-content: center;
   height: 100%;
 
   &-nativePlayer {
