feat(components/molecule/phoneInput): fix styles for input with help text

--- a/components/molecule/phoneInput/src/index.scss
+++ b/components/molecule/phoneInput/src/index.scss
@@ -37,6 +37,19 @@
 
         & > input {
           background: none;
+
+          &.sui-AtomInput-input--noBorder {
+            position: relative;
+          }
+        }
+
+        & span.sui-AtomValidationText {
+          position: absolute;
+          left: 0;
+        }
+        & span.sui-AtomHelpText {
+          position: absolute;
+          left: 0;
         }
 
         &.splitted {
