--- a/components/molecule/phoneInput/src/index.scss
+++ b/components/molecule/phoneInput/src/index.scss
@@ -47,6 +47,11 @@ $h-molecule-phone-input: 40px;
 
         & .sui-AtomInput-input {
           position: relative;
+
+          &:focus {
+            border: none;
+            box-shadow: none;
+          }
         }
 
         & span.sui-AtomHelpText,
