feat(components/atom/input): Add capability to display a right|left label

--- a/components/atom/input/src/Input/Component/index.scss
+++ b/components/atom/input/src/Input/Component/index.scss
@@ -14,6 +14,14 @@ $class-read-only: '#{$base-class-input}--readOnly';
     width: inherit;
   }
 
+  &-right-label {
+    border-right: none;
+  }
+
+  &-left-label {
+    border-left: none;
+  }
+
   &--hidden {
     display: none;
   }
