--- a/components/molecule/accordion/src/styles/index.scss
+++ b/components/molecule/accordion/src/styles/index.scss
@@ -125,13 +125,12 @@ $base-class-item-panel: '#{$base-class-item}Panel';
   }
 }
 #{$base-class-item-header}ButtonContainer {
-  width: 100%;
+  width: calc(100% - ($p-accordion-title * 2));
   height: 100%;
   display: flex;
   align-items: center;
   background-color: $bgc-accordion-item-header;
   padding: $p-accordion-item-header;
-  max-width: calc(100% - ($p-accordion-title * 2));
 }
 
 #{$base-class-item-header-icon}Default {
