feat(components/molecule/accordion): add text-wrap balance property to use if brower support it

--- a/components/molecule/accordion/src/styles/index.scss
+++ b/components/molecule/accordion/src/styles/index.scss
@@ -109,6 +109,7 @@ $base-class-item-panel: '#{$base-class-item}Panel';
     text-align: inherit;
     &--wrap {
       white-space: wrap;
+      text-wrap: balance;
     }
     &--noWrap {
       text-overflow: ellipsis;
