--- a/components/molecule/accordion/src/styles/index.scss
+++ b/components/molecule/accordion/src/styles/index.scss
@@ -126,7 +126,7 @@ $base-class-item-panel: '#{$base-class-item}Panel';
   }
 }
 #{$base-class-item-header}ButtonContainer {
-  width: calc(100% - #{$p-accordion-title * 2});
+  width: calc(100% - #{$pi-accordion-title * 2});
   height: 100%;
   display: flex;
   align-items: center;
