--- a/components/molecule/phoneInput/src/settings.scss
+++ b/components/molecule/phoneInput/src/settings.scss
@@ -1,4 +1,5 @@
 $fz-molecule-phoneinput-input-prefix-code: $fz-m !default;
+$fz-molecule-phoneinput-input: $fz-base !default;
 $fz-molecule-phoneinput-dropdown-option-label: $fz-m !default;
 $fz-molecule-phoneinput-label: $fz-s !default;
 $fz-molecule-phoneinput-info: $fz-xs !default;
