fix(components/atom/checkbox): Define border-color to fix Firefox style issue

--- a/components/atom/checkbox/src/styles/index.scss
+++ b/components/atom/checkbox/src/styles/index.scss
@@ -6,6 +6,7 @@ $class-icon: '#{$base-class}--Icon';
   vertical-align: middle;
   box-sizing: border-box;
   color: $c-atom-checkbox;
+
   &#{$base-class}--native-disabled {
     #{$class-icon} {
       padding: 0;
@@ -25,6 +26,7 @@ $class-icon: '#{$base-class}--Icon';
       &:focus {
         outline: none;
       }
+
       &:focus-visible {
         outline: 2px solid transparentize($c-primary, 0.6);
       }
@@ -36,6 +38,7 @@ $class-icon: '#{$base-class}--Icon';
         justify-content: center;
       }
     }
+
     input[type='checkbox'] {
       display: none;
     }
@@ -44,6 +47,7 @@ $class-icon: '#{$base-class}--Icon';
   @each $size-name, $size-values in $sz-icon {
     $width: map-get($size-values, width);
     $height: map-get($size-values, height);
+
     &#{$base-class}--size-#{$size-name} {
       width: $width;
       height: $height;
@@ -59,11 +63,13 @@ $class-icon: '#{$base-class}--Icon';
   // semantic status
   &#{$base-class}--native-disabled #{$class-icon},
   &#{$base-class}--native-enabled input[type='checkbox'] {
-    border-color: inherit;
+    border-color: $bdc-atom-checkbox;
     background-color: $c-atom-checkbox;
+
     &::before {
       box-shadow: inset 1em 1em $c-primary;
     }
+
     &.is-checked,
     &.is-indeterminate,
     &:checked,
@@ -75,6 +81,7 @@ $class-icon: '#{$base-class}--Icon';
         box-shadow: inset 1em 1em $c-atom-checkbox;
       }
     }
+
     &:disabled {
       color: $bdc-atom-checkbox-is-disabled;
       background-color: $bgc-checked-atom-checkbox-is-disabled;
@@ -84,14 +91,17 @@ $class-icon: '#{$base-class}--Icon';
         box-shadow: none;
       }
     }
+
     @each $status, $color in $status-atom-checkbox {
       &[data-status='#{$status}']:not(:disabled) {
         border-color: $color;
         color: $color;
         background-color: $c-atom-checkbox;
+
         &::before {
           box-shadow: inset 1em 1em $c-atom-checkbox;
         }
+
         &.is-checked,
         &.is-indeterminate,
         &:checked,
@@ -117,6 +127,7 @@ $class-icon: '#{$base-class}--Icon';
       border-style: solid;
       border-radius: 0.15em;
       display: flex;
+
       &::before {
         margin: 10%;
         content: '';
@@ -126,21 +137,25 @@ $class-icon: '#{$base-class}--Icon';
         transition: 120ms transform ease-in-out;
         transform-origin: bottom left;
       }
+
       &:checked {
         &::before {
           transform: scale(1);
           clip-path: polygon(10% 40%, 0% 55%, 50% 90%, 100% 10%, 85% 0%, 46% 65%);
         }
       }
+
       &:indeterminate {
         &::before {
           transform: scale(1);
           clip-path: polygon(0% 44%, 100% 44%, 100% 56%, 0% 56%);
         }
       }
+
       &:focus {
         outline: none;
       }
+
       &:focus-visible {
         outline: 2px solid transparentize($c-primary, 0.6);
       }
