--- a/components/atom/checkbox/src/styles/settings.scss
+++ b/components/atom/checkbox/src/styles/settings.scss
@@ -1,4 +1,5 @@
 $bdrs-atom-checkbox: $bdrs-m !default;
+$bdc-atom-checkbox: rgb(118, 118, 118) !default;
 $c-atom-checkbox: $c-white !default;
 $h-atom-checkbox-small: $sz-icon-s !default;
 $w-atom-checkbox-small: $sz-icon-s !default;
