--- a/components/molecule/phoneInput/src/styles/settings.scss
+++ b/components/molecule/phoneInput/src/styles/settings.scss
@@ -1,4 +1,4 @@
-$h-molecule-phone-input: 40px;
+$h-molecule-phone-input: 40px !default;
 $fz-molecule-phone-input-input-prefix-code: $fz-m !default;
 $fz-molecule-phone-input-input: $fz-base !default;
 $fz-molecule-phone-input-dropdown-option-label: $fz-m !default;
