refactor(components/atom/checkbox): Use theme color token

--- a/components/atom/checkbox/src/styles/settings.scss
+++ b/components/atom/checkbox/src/styles/settings.scss
@@ -1,5 +1,5 @@
 $bdrs-atom-checkbox: $bdrs-m !default;
-$bdc-atom-checkbox: rgb(118, 118, 118) !default;
+$bdc-atom-checkbox: $c-gray-light-2 !default;
 $c-atom-checkbox: $c-white !default;
 $h-atom-checkbox-small: $sz-icon-s !default;
 $w-atom-checkbox-small: $sz-icon-s !default;
