fix(components/molecule/phoneInput): fix wrong padding

--- a/components/molecule/phoneInput/src/styles/index.scss
+++ b/components/molecule/phoneInput/src/styles/index.scss
@@ -41,6 +41,7 @@ $base-class: '.sui-MoleculePhoneInput';
 
         & .sui-AtomInput-input {
           position: relative;
+          padding-left: 0;
 
           &:focus {
             border: none;
