--- a/components/atom/switch/src/styles/index.scss
+++ b/components/atom/switch/src/styles/index.scss
@@ -133,13 +133,22 @@ $base-class: '.sui-AtomSwitch';
       box-sizing: border-box;
       background-color: $c-atom-switch-circle;
       border-radius: ($h-atom-switch-default - 2) * 0.5;
-      border: $bdw-s solid $c-atom-switch-circle;
-      box-shadow: 2px 0 2px 0 $c-gray-light;
+      border: $bd-atom-switch-circle;
+      box-shadow: $bxsh-atom-switch-circle;
       height: $h-atom-switch-circle-default - 2px;
       width: $w-atom-switch-circle-default - 2px;
       transition: margin-left $atom-switch-transition-time ease-in-out;
-      margin: 0px;
+      margin: $m-atom-switch-circle;
       display: block;
+
+      &Loading {
+        color: $c-atom-switch-circle-loading;
+        height: $h-atom-switch-circle-loading;
+        left: $l-atom-switch-circle-loading;
+        position: relative;
+        top: $t-atom-switch-circle-loading;
+        width: $w-atom-switch-circle-loading;
+      }
     }
 
     #{$base-class}-icon-right,
@@ -208,6 +217,13 @@ $base-class: '.sui-AtomSwitch';
             border-radius: $w-atom-switch-small * 0.5;
             height: $h-atom-switch-input-container-small - 2px;
             width: $h-atom-switch-input-container-small - 2px;
+
+            &Loading {
+              height: $h-atom-switch-circle-loading-small;
+              left: $l-atom-switch-circle-loading-small;
+              top: $t-atom-switch-circle-loading-small - 1px;
+              width: $w-atom-switch-circle-loading-small;
+            }
           }
           &--right {
             #{$base-class}-circle {
