feat(components/atom/switch): Add a scss token to customize switch focus border

--- a/components/atom/switch/src/styles/settings.scss
+++ b/components/atom/switch/src/styles/settings.scss
@@ -37,6 +37,7 @@ $bxsh-atom-switch-container: 0 0 4px 0 transparent !default;
 $atom-switch-transition-time: 0.3s !default;
 
 $bd-atom-switch-circle: $bdw-s solid $c-atom-switch-circle !default;
+$bd-atom-switch-circle--focus: $bdw-s solid $c-atom-switch-circle !default;
 $bxsh-atom-switch-circle: 2px 0 2px 0 $c-gray-light !default;
 $m-atom-switch-circle: 0px !default;
 
