--- a/components/atom/switch/src/styles/index.scss
+++ b/components/atom/switch/src/styles/index.scss
@@ -88,7 +88,7 @@ $base-class: '.sui-AtomSwitch';
 
     &:focus {
       #{$base-class}-circle {
-        border: $bdw-s solid $c-atom-switch-circle;
+        border: $bd-atom-switch-circle--focus;
         box-shadow: none;
       }
     }
