--- a/components/atom/checkbox/src/styles/settings.scss
+++ b/components/atom/checkbox/src/styles/settings.scss
@@ -34,6 +34,12 @@ $c-atom-checkbox--success: $c-success !default;
 $c-atom-checkbox--error: $c-error !default;
 $c-atom-checkbox--alert: $c-alert !default;
 
+$c-atom-checkbox--checked: $c-atom-checkbox !default;
+$bgc-atom-checkbox--checked: $c-white !default;
+$cur-atom-checkbox: default !default;
+$cur-atom-checkbox--disabled: default !default;
+$bdc-atom-checkbox--checked: $c-primary !default;
+
 $status-atom-checkbox: success $c-atom-checkbox--success, error $c-atom-checkbox--error, alert $c-atom-checkbox--alert !default;
 
 $sz-icon: (
