feat(components/atom/checkbox): fix default checked color

--- a/components/atom/checkbox/src/styles/settings.scss
+++ b/components/atom/checkbox/src/styles/settings.scss
@@ -35,7 +35,7 @@ $c-atom-checkbox--error: $c-error !default;
 $c-atom-checkbox--alert: $c-alert !default;
 
 $c-atom-checkbox--checked: $c-atom-checkbox !default;
-$bgc-atom-checkbox--checked: $c-white !default;
+$bgc-atom-checkbox--checked: $c-primary !default;
 $cur-atom-checkbox: default !default;
 $cur-atom-checkbox--disabled: default !default;
 $bdc-atom-checkbox--checked: $c-primary !default;
