--- a/components/molecule/dropdownOption/src/styles/index.scss
+++ b/components/molecule/dropdownOption/src/styles/index.scss
@@ -81,7 +81,7 @@ $base-class: '.sui-MoleculeDropdownOption';
 
   &--disabled {
     color: $c-dropdown-option-disabled;
-    cursor: default;
+    pointer-events: none;
   }
 
   &:hover,
