feat(components/molecule/tabs): Add additional SCSS color variable for SUI tabs component

--- a/components/molecule/tabs/src/_settings.scss
+++ b/components/molecule/tabs/src/_settings.scss
@@ -3,6 +3,7 @@ $bb-sui-molecule-tabs-fullwidth: 1px solid $bdc-sui-molecule-tabs !default;
 $bc-sui-molecule-tabs-highlighted: transparent !default;
 $bdc-sui-molecule-tabs-highlighted-vertical-right: $bdc-sui-molecule-tabs !default;
 $bdc-sui-molecule-tabs-highlighted: transparent !default;
+$bdbc-sui-molecule-tabs-highlighted-active: $c-primary !default;
 $bdrs-sui-molecule-tabs: 0 !default;
 $bdw-sui-molecule-tabs: $p-s !default;
 $bdw-sui-molecule-tabs-highlighted-active: $bdw-sui-molecule-tabs !default;
@@ -15,7 +16,7 @@ $bt-sui-molecule-tabs-content: $bdw-sui-molecule-tabs-highlighted solid $bdc-sui
 $c-sui-molecule-tabs-active: $c-primary !default;
 $c-sui-molecule-tabs-disabled: $c-gray-lightest !default;
 $c-sui-molecule-tabs-highlighted-active: $c-primary !default;
-$c-sui-molecule-tabs-icon-active: $c-primary !default;
+$c-sui-molecule-tabs-icon-active: red !default;
 $c-sui-molecule-tabs: $c-gray-dark-3 !default;
 $fw-sui-molecule-tabs-active: $fw-regular !default;
 $fw-sui-molecule-tabs: inherit !default;
