feat(components/molecule/tabs): Remove accidental color change

--- a/components/molecule/tabs/src/_settings.scss
+++ b/components/molecule/tabs/src/_settings.scss
@@ -16,7 +16,7 @@ $bt-sui-molecule-tabs-content: $bdw-sui-molecule-tabs-highlighted solid $bdc-sui
 $c-sui-molecule-tabs-active: $c-primary !default;
 $c-sui-molecule-tabs-disabled: $c-gray-lightest !default;
 $c-sui-molecule-tabs-highlighted-active: $c-primary !default;
-$c-sui-molecule-tabs-icon-active: red !default;
+$c-sui-molecule-tabs-icon-active: $c-primary !default;
 $c-sui-molecule-tabs: $c-gray-dark-3 !default;
 $fw-sui-molecule-tabs-active: $fw-regular !default;
 $fw-sui-molecule-tabs: inherit !default;
