feat(components/atom/slider): Use the size variable for the disabled state of the slider

--- a/components/atom/slider/src/styles/index.scss
+++ b/components/atom/slider/src/styles/index.scss
@@ -124,7 +124,7 @@ $class-tooltip-hidden: '#{$class-tooltip}-hidden';
     }
 
     #{$class-rail} {
-      height: 8px;
+      height: $h-atom-slider-track;
     }
 
     #{$class-track} {
