--- a/components/atom/button/src/styles/index.scss
+++ b/components/atom/button/src/styles/index.scss
@@ -67,9 +67,10 @@ $base-class: '.sui-AtomButton';
     }
   }
 
-  &-inner {
-    align-items: center;
+  &-inner,
+  &-content {
     display: inline-flex;
+    align-items: center;
     height: 100%;
     pointer-events: none;
     text-decoration: inherit;
