refactor(components/atom/progressBar): Rename hideBorder property to isBorderless

--- a/components/atom/progressBar/src/ProgressBarLine/index.scss
+++ b/components/atom/progressBar/src/ProgressBarLine/index.scss
@@ -28,7 +28,7 @@ $base-class-line: '#{$base-class}Line';
       border: $bd-line-progress-container--success;
     }
 
-    &--noborder {
+    &--borderless {
       border: none;
     }
 
