--- a/components/molecule/dropdownList/src/styles/index.scss
+++ b/components/molecule/dropdownList/src/styles/index.scss
@@ -13,6 +13,13 @@ $base-class: '.sui-MoleculeDropdownList';
     display: none;
   }
 
+  &--position {
+    &-top {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+  }
+
   &--design {
     &-solid {
       border: $bd-dropdown-list;
