feat(components/molecule/dropdownList): Change border radious when placed on top

--- a/components/molecule/dropdownList/src/styles/index.scss
+++ b/components/molecule/dropdownList/src/styles/index.scss
@@ -17,6 +17,7 @@ $base-class: '.sui-MoleculeDropdownList';
     &-top {
       display: flex;
       flex-direction: column-reverse;
+      border-radius: $bdrs-dropdown-list-top;
     }
   }
 
