chore(Root): test

--- a/components/atom/icon/demo/index.scss
+++ b/components/atom/icon/demo/index.scss
@@ -18,7 +18,7 @@
   &-select {
     align-items: center;
     backdrop-filter: blur(8px);
-    background: rgba(255, 255, 255, 0.65);
+    background: color-mix(in srgb, $c-white 35%, transparent);
     border-bottom: $bdw-s dashed #eee;
     display: flex;
     list-style: none;
@@ -37,7 +37,7 @@
     transition: opacity 0.3s ease;
 
     &.is-selected {
-      background: rgba(0, 0, 0, 0.1);
+      background: color-mix(in srgb, $c-black 90%, transparent);
       border-radius: $bdw-l;
     }
 
