--- a/components/molecule/drawer/src/_settings.scss
+++ b/components/molecule/drawer/src/_settings.scss
@@ -2,7 +2,7 @@ $w-molecule-drawer: 260px !default;
 $h-molecule-drawer: $w-molecule-drawer !default;
 $z-molecule-drawer: $z-modal !default;
 $z-molecule-drawer-overlay: $z-modal - 1 !default;
-$bxsh-molecule-drawer: 0 0 6px rgba(0, 0, 0, 0.4) !default;
+$bxsh-molecule-drawer: 0 0 6px color-mix(in srgb, $c-black 60%, transparent) !default;
 $bgc-molecule-drawer: $c-white !default;
 $bdtlrs-molecule-drawer-content: 0 !default;
 $bdtrrs-molecule-drawer-content: 0 !default;
@@ -24,8 +24,8 @@ $trsdu-molecule-drawer-map: (
   slow: $dur-slow
 );
 
-$bgc-molecule-drawer-overlay-start: rgba(0, 0, 0, 0.4) !default;
-$bgc-molecule-drawer-overlay-finish: rgba(0, 0, 0, 0.6) !default;
+$bgc-molecule-drawer-overlay-start: color-mix(in srgb, $c-black 60%, transparent) !default;
+$bgc-molecule-drawer-overlay-finish: color-mix(in srgb, $c-black 40%, transparent) !default;
 
 @keyframes bg-overlay {
   0% {
